--- a/InformaticaIndustrial/App.config
+++ b/InformaticaIndustrial/App.config
@@ -10,7 +10,7 @@
   <connectionStrings>
     <add name="dbContext" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=db_ii;password=&quot;" providerName="System.Data.EntityClient" />
     <add name="Entidades" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=db_ii;password=&quot;" providerName="System.Data.EntityClient" />
-    <add name="dbEntities" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=db_ii&quot;" providerName="System.Data.EntityClient" />
+    <add name="dbEntities" connectionString="metadata=res://*/Modelos.Modelo.csdl|res://*/Modelos.Modelo.ssdl|res://*/Modelos.Modelo.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=db_ii&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
