--- a/InformaticaIndustrial/InformaticaIndustrial.csproj
+++ b/InformaticaIndustrial/InformaticaIndustrial.csproj
@@ -57,15 +57,20 @@
     <Compile Include="Modelos\articulo.cs">
       <DependentUpon>Modelo.tt</DependentUpon>
     </Compile>
+    <Compile Include="Modelos\ArticuloDAO.cs" />
     <Compile Include="Modelos\bom.cs">
       <DependentUpon>Modelo.tt</DependentUpon>
     </Compile>
+    <Compile Include="Modelos\BomDAO.cs" />
     <Compile Include="Modelos\descripcion.cs">
       <DependentUpon>Modelo.tt</DependentUpon>
     </Compile>
+    <Compile Include="Modelos\DescripcionDAO.cs" />
     <Compile Include="Modelos\externo.cs">
       <DependentUpon>Modelo.tt</DependentUpon>
     </Compile>
+    <Compile Include="Modelos\RegistroDAO.cs" />
+    <Compile Include="Modelos\UnidadMedidaDAO.cs" />
     <Compile Include="Vista\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
