Agregamos formulario AgregarBom Agregar y Eliminar BOM funcionan.

--- a/InformaticaIndustrial/App.config
+++ b/InformaticaIndustrial/App.config
@@ -8,9 +8,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
-    <add name="dbContext" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=db_ii;password=&quot;" providerName="System.Data.EntityClient" />
-    <add name="Entidades" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=db_ii;password=&quot;" providerName="System.Data.EntityClient" />
-    <add name="dbEntities" connectionString="metadata=res://*/Modelos.Modelo.csdl|res://*/Modelos.Modelo.ssdl|res://*/Modelos.Modelo.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=db_ii&quot;" providerName="System.Data.EntityClient" />
+    <add name="dbContext" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=db_ii;allowzerodatetime=False;convertzerodatetime=True;password=&quot;" providerName="System.Data.EntityClient" />
+    <add name="Entidades" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=db_ii;allowzerodatetime=False;convertzerodatetime=True;password=&quot;" providerName="System.Data.EntityClient" />
+    <add name="dbEntities" connectionString="metadata=res://*/Modelos.Modelo.csdl|res://*/Modelos.Modelo.ssdl|res://*/Modelos.Modelo.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;allowzerodatetime=False;convertzerodatetime=True;database=db_ii&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -20,3 +20,4 @@
     </defaultConnectionFactory>
   </entityFramework>
 </configuration>
+
