Correccion de BomForm y AgregarBom Se agrego ExplosionImplosionForm

--- a/InformaticaIndustrial/InformaticaIndustrial.csproj
+++ b/InformaticaIndustrial/InformaticaIndustrial.csproj
@@ -83,6 +83,12 @@
     <Compile Include="Vista\BomForm.Designer.cs">
       <DependentUpon>BomForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vista\ExplosionImplosionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\ExplosionImplosionForm.Designer.cs">
+      <DependentUpon>ExplosionImplosionForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vista\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -142,6 +148,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Vista\BomForm.resx">
       <DependentUpon>BomForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vista\ExplosionImplosionForm.resx">
+      <DependentUpon>ExplosionImplosionForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vista\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
