--- a/InformaticaIndustrial/InformaticaIndustrial.csproj
+++ b/InformaticaIndustrial/InformaticaIndustrial.csproj
@@ -70,12 +70,19 @@
       <DependentUpon>Modelo.tt</DependentUpon>
     </Compile>
     <Compile Include="Modelos\RegistroDAO.cs" />
+    <Compile Include="Modelos\TipoArticuloDAO.cs" />
     <Compile Include="Modelos\UnidadMedidaDAO.cs" />
     <Compile Include="Vista\AgregarBom.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Vista\AgregarBom.Designer.cs">
       <DependentUpon>AgregarBom.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Vista\AltaArticulo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\AltaArticulo.Designer.cs">
+      <DependentUpon>AltaArticulo.cs</DependentUpon>
     </Compile>
     <Compile Include="Vista\BomForm.cs">
       <SubType>Form</SubType>
@@ -134,6 +141,12 @@
     <Compile Include="Modelos\usuario.cs">
       <DependentUpon>Modelo.tt</DependentUpon>
     </Compile>
+    <Compile Include="Vista\Programa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\Programa.Designer.cs">
+      <DependentUpon>Programa.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -146,6 +159,9 @@
     <EmbeddedResource Include="Vista\AgregarBom.resx">
       <DependentUpon>AgregarBom.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Vista\AltaArticulo.resx">
+      <DependentUpon>AltaArticulo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vista\BomForm.resx">
       <DependentUpon>BomForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -154,6 +170,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Vista\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vista\Programa.resx">
+      <DependentUpon>Programa.cs</DependentUpon>
     </EmbeddedResource>
     <EntityDeploy Include="Modelos\Modelo.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
