--- a/InformaticaIndustrial/InformaticaIndustrial.csproj
+++ b/InformaticaIndustrial/InformaticaIndustrial.csproj
@@ -37,6 +37,9 @@
       <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="QRCoder">
+      <HintPath>..\packages\QRCoder.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -57,21 +60,60 @@
     <Compile Include="Modelos\articulo.cs">
       <DependentUpon>Modelo.tt</DependentUpon>
     </Compile>
-    <Compile Include="Modelos\ArticuloDAO.cs" />
+    <Compile Include="Modelos\art_sustituto.cs">
+      <DependentUpon>Modelo.tt</DependentUpon>
+    </Compile>
     <Compile Include="Modelos\bom.cs">
       <DependentUpon>Modelo.tt</DependentUpon>
     </Compile>
-    <Compile Include="Modelos\BomDAO.cs" />
     <Compile Include="Modelos\descripcion.cs">
       <DependentUpon>Modelo.tt</DependentUpon>
     </Compile>
-    <Compile Include="Modelos\DescripcionDAO.cs" />
     <Compile Include="Modelos\externo.cs">
       <DependentUpon>Modelo.tt</DependentUpon>
     </Compile>
+    <Compile Include="Modelos\lenguaje.cs">
+      <DependentUpon>Modelo.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\Modelo.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Modelo.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\Modelo.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Modelo.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\Modelo.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Modelo.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\ArticuloDAO.cs" />
+    <Compile Include="Modelos\BomDAO.cs" />
+    <Compile Include="Modelos\DescripcionDAO.cs" />
     <Compile Include="Modelos\RegistroDAO.cs" />
     <Compile Include="Modelos\TipoArticuloDAO.cs" />
     <Compile Include="Modelos\UnidadMedidaDAO.cs" />
+    <Compile Include="Modelos\registro.cs">
+      <DependentUpon>Modelo.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\rol.cs">
+      <DependentUpon>Modelo.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\tipo_articulo.cs">
+      <DependentUpon>Modelo.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\tipo_externos.cs">
+      <DependentUpon>Modelo.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\unidad_med.cs">
+      <DependentUpon>Modelo.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\usuario.cs">
+      <DependentUpon>Modelo.tt</DependentUpon>
+    </Compile>
     <Compile Include="Vista\AgregarBom.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,6 +138,12 @@
     <Compile Include="Vista\BomForm.Designer.cs">
       <DependentUpon>BomForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vista\Codigos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\Codigos.Designer.cs">
+      <DependentUpon>Codigos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vista\ExplosionImplosionForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,45 +156,9 @@
     <Compile Include="Vista\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Modelos\lenguaje.cs">
-      <DependentUpon>Modelo.tt</DependentUpon>
-    </Compile>
     <Compile Include="Modelos\LenguajeDAO.cs" />
-    <Compile Include="Modelos\Modelo.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Modelo.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Modelos\Modelo.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Modelo.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Modelos\Modelo.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Modelo.edmx</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Modelos\registro.cs">
-      <DependentUpon>Modelo.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Modelos\rol.cs">
-      <DependentUpon>Modelo.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Modelos\tipo_articulo.cs">
-      <DependentUpon>Modelo.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Modelos\tipo_externos.cs">
-      <DependentUpon>Modelo.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Modelos\unidad_med.cs">
-      <DependentUpon>Modelo.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Modelos\usuario.cs">
-      <DependentUpon>Modelo.tt</DependentUpon>
-    </Compile>
     <Compile Include="Vista\FormInicial.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -171,6 +183,12 @@
     <Compile Include="Vista\Programa.Designer.cs">
       <DependentUpon>Programa.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vista\Stock.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\Stock.Designer.cs">
+      <DependentUpon>Stock.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -192,6 +210,9 @@
     <EmbeddedResource Include="Vista\BomForm.resx">
       <DependentUpon>BomForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Vista\Codigos.resx">
+      <DependentUpon>Codigos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vista\ExplosionImplosionForm.resx">
       <DependentUpon>ExplosionImplosionForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -206,6 +227,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Vista\Programa.resx">
       <DependentUpon>Programa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vista\Stock.resx">
+      <DependentUpon>Stock.cs</DependentUpon>
     </EmbeddedResource>
     <EntityDeploy Include="Modelos\Modelo.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
@@ -226,10 +250,15 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controladores\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Modelos\Modelo.Context.tt">
@@ -242,9 +271,6 @@
       <DependentUpon>Modelo.edmx</DependentUpon>
       <LastGenOutput>Modelo.cs</LastGenOutput>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controladores\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
